Added more sections to the HTML page

--- a/index.html
+++ b/index.html
@@ -2,29 +2,41 @@
 
 <head>
   <title>Index Page</title>
-  <style rel="stylesheet" href="../css/style.css"></style>
+  <link rel="stylesheet" type="text/css" href="base.css">
 </head>
 
 <body>
   <header>
     <div class="container">
         <div id="branding">
-          <h1>Welcome to Capital Bank</h1>
+          <h1>Welcome to <span class="highlight ">Capital Bank</span></h1>
         </div>
-    </div>
-    <nav>
-        <ul>
-          <li><a href="index.html">Home Page</a></li>
-          <li><a href="aboutus.html">About Us</a></li>
-          <li><a href="network.html">Network</a></li>
-          <li><a href="contactus.html">Contact Us</a></li>
-       </ul>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="network.html">Network</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+          </ul>
+        </nav>
+   </div>
   </header>
+
+  <section id="showcase">
+    <div class="container">
+      <h1>The Bank You Can Trust...</h1>
+      <p>We are the nation's leading bank for 55 years.</p>
+      <p>Your trust made us who we are today.</p>
+    </div>
+  </section>
 
 <section id="content">
   <div class="container">
     <h1>This is Temporary content</h1>
-    <p>This is temp content.Real contend will be added later.</p>
+    <p>
+      This is temp content.Real content will be added later.This is temp content.Real content will be added later.This is temp content.
+      Real content will be added later.
+    </p>
   </div>
 </section>
 
@@ -32,15 +44,21 @@
   <div class="container">
     <div class="box">
       <h3>Home</h3>
-      <p>This will be redirected to home page</p>
+      <p>
+        This will be redirected to home page.This will be redirected to home page.This will be redirected to home page.
+      </p>
     </div>
     <div class="box">
       <h3>Users</h3>
-      <p>This will be redirected to users page</p>
+      <p>
+        This will be redirected to users page.This will be redirected to users page.This will be redirected to users page.
+      </p>
     </div>
     <div class="box">
       <h3>Careers</h3>
-      <p>This will be redirected to careers page</p>
+      <p>
+        This will be redirected to careers page.This will be redirected to careers page.This will be redirected to careers page.
+      </p>
     </div>
   </div>
 </section>
