Added the basic menu items

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-
 <head>
   <title>Index Page</title>
   <link rel="stylesheet" type="text/css" href="base.css">
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
@@ -21,6 +21,16 @@
         </nav>
    </div>
   </header>
+
+  <section id="MainTabItems">
+    <div class="container">
+      <button class="tablinks">Personal</button>
+      <button class="tablinks">Corporate</button>
+      <button class="tablinks">Investments</button>
+      <button class="tablinks">International</button>
+      <button class="tablinks">Careers</button>
+   </div>  -->
+ </section>
 
   <section id="showcase">
     <div class="container">
